# SerbianUprising

./: .gitignore  CMakeLists.txt  README.md  graph.cpp  graph.hpp  resources.qrc
resources/: init.json
resources/saved_games/: game1.json  game2.json  game3.json  game4.json  test_game.json  test_save.json  turcizam.json
src/: Army.h  Battle.cpp  Battle.h  CMakeLists.txt  Strength.cpp  clientwindow.cpp  clientwindow.h  createlobbywindow.cpp  createlobbywindow.h  lobbywindow.cpp  lobbywindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  testBattle.cpp
src/Interface/: clientgamemanager.cpp  clientgamemanager.h  filemanager.cpp  filemanager.h  gamemanager.cpp  gamemanager.h  gamemenu.cpp  gamemenu.h  infowidget.cpp  infowidget.h  jsonserializer.h  map.cpp  map.h  maplayer.cpp  maplayer.h  mapscene.cpp  mapscene.h  serializer.h  servergamemanager.cpp  servergamemanager.h
src/Interface/Items/: AttackTransferDialog.cpp  AttackTransferDialog.h  CustomInputDialog.cpp  CustomInputDialog.h  CustomMessageBox.cpp  attacktransferdialog.cpp  attacktransferdialog.h  characterwidget.cpp  characterwidget.h  customarrowitem.cpp  customarrowitem.h  custominputdialog.cpp  custominputdialog.h  custommessagebox.cpp  custommessagebox.h  infowidget.h  map.h  tutorialwindow.cpp  tutorialwindow.h  zoomablegraphicsview.cpp  zoomablegraphicsview.h
src/Interface/Utility/: jsonserializer.cpp  serializable.h
src/base/: Army.cpp  Army.h  Battle.cpp  Battle.h  MoveArmy.cpp  MoveArmy.h  Strength.cpp  Strength.h  Terrain.cpp  Terrain.h  Territory.h  mergeArmies.cpp  testBattle.cpp  testBattle.h
src/base/Entities/: Army.cpp  Army.h  Culture.h  Terrain.cpp  Terrain.h  Territory.cpp  army.cpp  army.h  city.cpp  city.h  culture.h  mergeArmies.cpp  mergeArmies.h  player.cpp  player.h  region.cpp  region.h  terrain.cpp  year.cpp  year.h
src/base/Mechanics/: Action.cpp  Action.h  Battle.cpp  Battle.h  BattleArmiesWorker.cpp  BattleArmiesWorker.h  BattleReplayDialog.cpp  BattleReplayDialog.h  BattleResultsDialog.cpp  BattleResultsDialog.h  MergeArmiesWorker.cpp  MergeArmiesWorker.h  MoveArmy.cpp  MoveArmy.h  Results.cpp  Results.h  Strength.cpp  Strength.h  action.cpp  action.h  addarmymanager.cpp  addarmymanager.h  battle.cpp  battle.h  battlearmiesworker.cpp  battlearmiesworker.h  battlereplaydialog.cpp  battlereplaydialog.h  battleresultsdialog.cpp  battleresultsdialog.h  event.cpp  event.h  eventhandle.cpp  eventhandle.h  mergearmiesworker.cpp  mergearmiesworker.h  movearmy.cpp  movearmy.h  results.h  strength.cpp  (+5 more)
src/base/Mechanics/Items/: battlereplaydialog.cpp  battlereplaydialog.h  battleresultsdialog.cpp  battleresultsdialog.h  event.h  results.cpp  results.h
src/base/Test/: testBattle.cpp  testBattle.h  testbattle.cpp  testbattle.h
src/base/graph/: edge.cpp  edge.hpp  graph.cpp  graph.hpp  vertex.cpp  vertex.hpp
src/graph/: edge.cpp  edge.hpp  graph.cpp  graph.hpp  vertex.cpp  vertex.hpp
src/gui/: gamemanager.cpp  gamemanager.h  maplayer.cpp  maplayer.h  mapscene.h
src/network/: client.cpp  client.h  connection.cpp  connection.h  server.cpp  server.h
